# Deep-Learning-Project

./: README.md  data_pipeline.ipynb  dataset.ipynb  model&training.ipynb  model_training.ipynb  outfit_index_test.pkl  outfit_index_train.pkl  outfit_index_val.pkl  polyvore.ipynb  pyproject.toml
